syntax = "proto3";

package sevalet;

option go_package = "./pb";

service CommandExecutor {
  rpc Execute(ExecuteRequest) returns (ExecuteResponse);
}

message ExecuteRequest {
  string command = 1;
  repeated string args = 2;
  int32 timeout = 3;
}

message ExecuteResponse {
  bool success = 1;
  int32 exit_code = 2;
  string stdout = 3;
  string stderr = 4;
  string execution_time = 5;
  string error_message = 6;
}
